--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 html {
   scroll-behavior: smooth;
-  background-color: #faf8f5 !important;
+  background-color: #f5faf8 !important;
 }
 
 body {
@@ -31,7 +31,7 @@ body.thailand-bg::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(250, 248, 245, 0.7), rgba(250, 248, 245, 0.7)), 
+  background: linear-gradient(rgba(250, 248, 245, 0.3), rgba(250, 248, 245, 0.3)), 
               url('https://images.pexels.com/photos/358229/pexels-photo-358229.jpeg?_gl=1*1qogi0b*_ga*MTI5MTY0Nzc1LjE3NTIyMDM0OTU.*_ga_8JE65Q40S6*czE3NTIyMDM0OTQkbzEkZzEkdDE3NTIyMDQxNjgkajU5JGwwJGgw');
   background-size: cover;
   background-position: center;
@@ -48,7 +48,7 @@ body.newyork-bg::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(rgba(250, 248, 245, 0.7), rgba(250, 248, 245, 0.7)), 
+  background: linear-gradient(rgba(250, 248, 245, 0.3), rgba(250, 248, 245, 0.3)), 
               url('https://images.unsplash.com/photo-1522083165195-3424ed129620?q=80&w=1897&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
   background-size: cover;
   background-position: center;
